force-app/main/default/objects/Account/fields/Accounttext__c.field-meta.xml
<CustomField>
    <fullName>Accounttext__c</fullName>
    <label>Accounttext</label>
    <type>TextArea</type>
</CustomField>