force-app/main/default/objects/Account/fields/customernumber__c.field-meta.xml
<CustomField>
    <fullName>customernumber__c</fullName>
    <label>customernumber</label>
    <type>Phone</type>
</CustomField>