force-app/main/default/objects/Account/fields/Dummy_text__c.field-meta.xml
<CustomField>
    <fullName>Dummy_text__c</fullName>
    <label>Dummytext</label>
    <length>90</length>
    <type>Text</type>
</CustomField>