force-app/main/default/objects/Account/fields/dummytext1__c.field-meta.xml
<CustomField>
    <fullName>dummytext1__c</fullName>
    <label>dummytext1</label>
    <type>TextArea</type>
</CustomField>