force-app/main/default/objects/Account/fields/textfortesting__c.field-meta.xml
<CustomField>
    <fullName>textfortesting__c</fullName>
    <label>textfortesting</label>
    <length>80</length>
    <type>Text</type>
</CustomField>